// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzBreadcrumbs > Snapshots > should match snapshot - custom separator 1`] = `
"<div class="flex text-sm">
  <div class="text-blue-500 text-grey-500">Home</div>
  <div class="text-grey-300 mx-4">→</div>
  <div class="text-blue-500 text-grey-500">Products</div>
  <div class="text-grey-300 mx-4">→</div>
  <div class="text-blue-500">Current Page</div>
  <!--v-if-->
</div>"
`;

exports[`FzBreadcrumbs > Snapshots > should match snapshot - default state 1`] = `
"<div class="flex text-sm">
  <div class="text-blue-500 text-grey-500">Home</div>
  <div class="text-grey-300 mx-4">/</div>
  <div class="text-blue-500 text-grey-500">Products</div>
  <div class="text-grey-300 mx-4">/</div>
  <div class="text-blue-500">Current Page</div>
  <!--v-if-->
</div>"
`;

exports[`FzBreadcrumbs > Snapshots > should match snapshot - single breadcrumb 1`] = `
"<div class="flex text-sm">
  <div class="text-blue-500">Single</div>
  <!--v-if-->
</div>"
`;

exports[`FzRouterBreadcrumbs > Snapshots > should match snapshot for automatic breadcrumbs 1`] = `
"<div class="fz__breadcrumbs">
  <div class="flex text-sm"><a href="/" class="router-link-active text-blue-500">home</a>
    <div class="text-grey-300 mx-4">/</div><a href="/foo" class="router-link-active text-blue-500">foo</a>
    <div class="text-grey-300 mx-4">/</div><a aria-current="page" href="/foo/bar" class="router-link-active router-link-exact-active text-blue-500 text-grey-500">bar</a>
    <!--v-if-->
  </div>
</div>
<div>Page</div>"
`;

exports[`FzRouterBreadcrumbs > Snapshots > should match snapshot for static breadcrumbs 1`] = `
"<div class="fz__breadcrumbs">
  <div class="flex text-sm"><a aria-current="page" href="/" class="router-link-active router-link-exact-active text-blue-500">home</a>
    <div class="text-grey-300 mx-4">/</div><a href="/foo" class="text-blue-500">foo</a>
    <div class="text-grey-300 mx-4">/</div><a href="/foo/bar" class="text-blue-500 text-grey-500">bar</a>
    <!--v-if-->
  </div>
</div>"
`;
